fix design on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -12,4 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  @media screen and (min-width: vars.$breakpoint) {
+    padding: 45px 30px 30px;
+  }
 }
