--- a/src/components/ImageRules/ImageRules.module.scss
+++ b/src/components/ImageRules/ImageRules.module.scss
@@ -1,4 +1,9 @@
+@use "../../styles/vars";
+
 .rules {
   max-width: 100%;
   padding: 0 30px;
+  @media screen and (min-width: vars.$breakpoint) {
+    padding: 0;
+  }
 }
